build/swift.output
Terminals which are not used

   DO
   SELF
   ERROR


State 26 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 49 conflicts: 2 shift/reduce
State 76 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce


Grammar

    0 $accept: root $end

    1 end_expr: ENDL
    2         | ';' opt_endl

    3 opt_endl: /* empty */
    4         | ENDL

    5 root: stmt_list

    6 stmt_import: IMPORT var

    7 stmt_block: '{' stmt_list '}' opt_endl

    8 stmt_list: /* empty */
    9          | stmt_list stmt opt_endl

   10 stmt: stmt_block
   11     | stmt_if
   12     | stmt_while
   13     | stmt_for
   14     | stmt_repeat
   15     | stmt_switch
   16     | BREAK end_expr
   17     | RETURN end_expr
   18     | RETURN expr end_expr
   19     | expr end_expr
   20     | var '=' expr end_expr
   21     | func_decl_named
   22     | end_expr
   23     | stmt_import

   24 stmt_if: IF expr opt_endl stmt_block elseif_list opt_endl
   25        | IF expr opt_endl stmt_block elseif_list ELSE stmt_block opt_endl

   26 elseif_list: /* empty */
   27            | elseif_list ELSEIF expr stmt_block

   28 stmt_switch: SWITCH expr opt_endl '{' opt_endl switch_cases opt_endl '}'

   29 switch_cases: /* empty */
   30             | switch_cases switch_case

   31 switch_case: case_label stmt_list
   32            | default_label stmt_list

   33 case_label: CASE expr ':'

   34 default_label: DEFAULT ':'

   35 stmt_while: WHILE expr stmt_block

   36 stmt_for: FOR alone_id IN expr stmt_block

   37 stmt_repeat: REPEAT stmt_block WHILE expr

   38 alone_id: ID

   39 id_chain: alone_id
   40         | id_chain '.' alone_id

   41 varlet: VAR
   42       | LET

   43 var: id_chain
   44    | var '[' expr ']'
   45    | varlet id_chain
   46    | varlet id_chain ':' '[' varubleType ']'
   47    | varlet id_chain ':' varubleType

   48 expr: var
   49     | INT
   50     | DOUBLE
   51     | STRING
   52     | TRUE
   53     | FALSE
   54     | BOOL
   55     | FLOAT
   56     | NIL
   57     | NOT expr
   58     | expr NOT
   59     | expr AND expr
   60     | expr OR expr
   61     | expr '+' expr
   62     | expr '-' expr
   63     | expr '*' expr
   64     | expr '/' expr
   65     | expr '%' expr
   66     | expr '>' expr
   67     | expr '<' expr
   68     | expr GE expr
   69     | expr LE expr
   70     | expr EQ expr
   71     | expr NE expr
   72     | expr RANGE expr
   73     | '(' expr ')'
   74     | '[' varubleType ']' '(' ')'
   75     | func_call
   76     | array_constructor

   77 func_call: var '(' arg_list ')'

   78 arg_list: /* empty */
   79         | args

   80 args: expr
   81     | id_chain ':' expr
   82     | args ',' alone_id ':' expr

   83 varubleType: INTT
   84            | STRINGT
   85            | FLOATT
   86            | DOUBLET
   87            | BOOLT
   88            | CHARACTERT

   89 func_decl_named: FUNCTION id_chain func_body

   90 func_body: '(' arg_list_decl ')' FUNCTIONARROW varubleType stmt_block
   91          | '(' arg_list_decl ')' stmt_block

   92 arg_list_decl: /* empty */

   93 @1: /* empty */

   94 arg_list_decl: args_decl @1

   95 args_decl: alone_id ':' varubleType
   96          | args_decl ',' alone_id ':' varubleType

   97 array_constructor: '[' array_elem_list ']'

   98 array_elem_list: /* empty */
   99                | array_elems

  100 array_elems: array_elem
  101            | array_elems ',' array_elem

  102 array_elem: expr


Terminals, with rules where they appear

$end (0) 0
'%' (37) 65
'(' (40) 73 74 77 90 91
')' (41) 73 74 77 90 91
'*' (42) 63
'+' (43) 61
',' (44) 82 96 101
'-' (45) 62
'.' (46) 40
'/' (47) 64
':' (58) 33 34 46 47 81 82 95 96
';' (59) 2
'<' (60) 67
'=' (61) 20
'>' (62) 66
'[' (91) 44 46 74 97
']' (93) 44 46 74 97
'{' (123) 7 28
'}' (125) 7 28
error (256)
IMPORT (258) 6
INT (259) 49
FLOAT (260) 55
DOUBLE (261) 50
BOOL (262) 54
STRING (263) 51
STRINGT (264) 84
CHARACTERT (265) 88
INTT (266) 83
FLOATT (267) 85
DOUBLET (268) 86
BOOLT (269) 87
TRUE (270) 52
FALSE (271) 53
LET (272) 42
VAR (273) 41
REPEAT (274) 37
WHILE (275) 35 37
FOR (276) 36
IN (277) 36
IF (278) 24 25
ELSE (279) 25
ELSEIF (280) 27
SWITCH (281) 28
CASE (282) 33
DEFAULT (283) 34
BREAK (284) 16
FUNCTION (285) 89
FUNCTIONARROW (286) 90
DO (287)
RANGE (288) 72
RETURN (289) 17 18
NIL (290) 56
SELF (291)
ERROR (292)
ID (293) 38
EQ (294) 70
NE (295) 71
LE (296) 69
GE (297) 68
NOT (298) 57 58
ENDL (299) 1 4
OR (300) 60
AND (301) 59


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
end_expr (66)
    on left: 1 2, on right: 16 17 18 19 20 22
opt_endl (67)
    on left: 3 4, on right: 2 7 9 24 25 28
root (68)
    on left: 5, on right: 0
stmt_import (69)
    on left: 6, on right: 23
stmt_block (70)
    on left: 7, on right: 10 24 25 27 35 36 37 90 91
stmt_list (71)
    on left: 8 9, on right: 5 7 9 31 32
stmt (72)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23,
    on right: 9
stmt_if (73)
    on left: 24 25, on right: 11
elseif_list (74)
    on left: 26 27, on right: 24 25 27
stmt_switch (75)
    on left: 28, on right: 15
switch_cases (76)
    on left: 29 30, on right: 28 30
switch_case (77)
    on left: 31 32, on right: 30
case_label (78)
    on left: 33, on right: 31
default_label (79)
    on left: 34, on right: 32
stmt_while (80)
    on left: 35, on right: 12
stmt_for (81)
    on left: 36, on right: 13
stmt_repeat (82)
    on left: 37, on right: 14
alone_id (83)
    on left: 38, on right: 36 39 40 82 95 96
id_chain (84)
    on left: 39 40, on right: 40 43 45 46 47 81 89
varlet (85)
    on left: 41 42, on right: 45 46 47
var (86)
    on left: 43 44 45 46 47, on right: 6 20 44 48 77
expr (87)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76, on right: 18 19 20 24 25 27 28
    33 35 36 37 44 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 80 81 82 102
func_call (88)
    on left: 77, on right: 75
arg_list (89)
    on left: 78 79, on right: 77
args (90)
    on left: 80 81 82, on right: 79 82
varubleType (91)
    on left: 83 84 85 86 87 88, on right: 46 47 74 90 95 96
func_decl_named (92)
    on left: 89, on right: 21
func_body (93)
    on left: 90 91, on right: 89
arg_list_decl (94)
    on left: 92 94, on right: 90 91
@1 (95)
    on left: 93, on right: 94
args_decl (96)
    on left: 95 96, on right: 94 96
array_constructor (97)
    on left: 97, on right: 76
array_elem_list (98)
    on left: 98 99, on right: 97
array_elems (99)
    on left: 100 101, on right: 99 101
array_elem (100)
    on left: 102, on right: 100 101


state 0

    0 $accept: . root $end

    $default  reduce using rule 8 (stmt_list)

    root       go to state 1
    stmt_list  go to state 2


state 1

    0 $accept: root . $end

    $end  shift, and go to state 3


state 2

    5 root: stmt_list .
    9 stmt_list: stmt_list . stmt opt_endl

    IMPORT    shift, and go to state 4
    INT       shift, and go to state 5
    FLOAT     shift, and go to state 6
    DOUBLE    shift, and go to state 7
    BOOL      shift, and go to state 8
    STRING    shift, and go to state 9
    TRUE      shift, and go to state 10
    FALSE     shift, and go to state 11
    LET       shift, and go to state 12
    VAR       shift, and go to state 13
    REPEAT    shift, and go to state 14
    WHILE     shift, and go to state 15
    FOR       shift, and go to state 16
    IF        shift, and go to state 17
    SWITCH    shift, and go to state 18
    BREAK     shift, and go to state 19
    FUNCTION  shift, and go to state 20
    RETURN    shift, and go to state 21
    NIL       shift, and go to state 22
    ID        shift, and go to state 23
    NOT       shift, and go to state 24
    ENDL      shift, and go to state 25
    ';'       shift, and go to state 26
    '{'       shift, and go to state 27
    '['       shift, and go to state 28
    '('       shift, and go to state 29

    $default  reduce using rule 5 (root)

    end_expr           go to state 30
    stmt_import        go to state 31
    stmt_block         go to state 32
    stmt               go to state 33
    stmt_if            go to state 34
    stmt_switch        go to state 35
    stmt_while         go to state 36
    stmt_for           go to state 37
    stmt_repeat        go to state 38
    alone_id           go to state 39
    id_chain           go to state 40
    varlet             go to state 41
    var                go to state 42
    expr               go to state 43
    func_call          go to state 44
    func_decl_named    go to state 45
    array_constructor  go to state 46


state 3

    0 $accept: root $end .

    $default  accept


state 4

    6 stmt_import: IMPORT . var

    LET  shift, and go to state 12
    VAR  shift, and go to state 13
    ID   shift, and go to state 23

    alone_id  go to state 39
    id_chain  go to state 40
    varlet    go to state 41
    var       go to state 47


state 5

   49 expr: INT .

    $default  reduce using rule 49 (expr)


state 6

   55 expr: FLOAT .

    $default  reduce using rule 55 (expr)


state 7

   50 expr: DOUBLE .

    $default  reduce using rule 50 (expr)


state 8

   54 expr: BOOL .

    $default  reduce using rule 54 (expr)


state 9

   51 expr: STRING .

    $default  reduce using rule 51 (expr)


state 10

   52 expr: TRUE .

    $default  reduce using rule 52 (expr)


state 11

   53 expr: FALSE .

    $default  reduce using rule 53 (expr)


state 12

   42 varlet: LET .

    $default  reduce using rule 42 (varlet)


state 13

   41 varlet: VAR .

    $default  reduce using rule 41 (varlet)


state 14

   37 stmt_repeat: REPEAT . stmt_block WHILE expr

    '{'  shift, and go to state 27

    stmt_block  go to state 48


state 15

   35 stmt_while: WHILE . expr stmt_block

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    BOOL    shift, and go to state 8
    STRING  shift, and go to state 9
    TRUE    shift, and go to state 10
    FALSE   shift, and go to state 11
    LET     shift, and go to state 12
    VAR     shift, and go to state 13
    NIL     shift, and go to state 22
    ID      shift, and go to state 23
    NOT     shift, and go to state 24
    '['     shift, and go to state 28
    '('     shift, and go to state 29

    alone_id           go to state 39
    id_chain           go to state 40
    varlet             go to state 41
    var                go to state 49
    expr               go to state 50
    func_call          go to state 44
    array_constructor  go to state 46


state 16

   36 stmt_for: FOR . alone_id IN expr stmt_block

    ID  shift, and go to state 23

    alone_id  go to state 51


state 17

   24 stmt_if: IF . expr opt_endl stmt_block elseif_list opt_endl
   25        | IF . expr opt_endl stmt_block elseif_list ELSE stmt_block opt_endl

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    BOOL    shift, and go to state 8
    STRING  shift, and go to state 9
    TRUE    shift, and go to state 10
    FALSE   shift, and go to state 11
    LET     shift, and go to state 12
    VAR     shift, and go to state 13
    NIL     shift, and go to state 22
    ID      shift, and go to state 23
    NOT     shift, and go to state 24
    '['     shift, and go to state 28
    '('     shift, and go to state 29

    alone_id           go to state 39
    id_chain           go to state 40
    varlet             go to state 41
    var                go to state 49
    expr               go to state 52
    func_call          go to state 44
    array_constructor  go to state 46


state 18

   28 stmt_switch: SWITCH . expr opt_endl '{' opt_endl switch_cases opt_endl '}'

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    BOOL    shift, and go to state 8
    STRING  shift, and go to state 9
    TRUE    shift, and go to state 10
    FALSE   shift, and go to state 11
    LET     shift, and go to state 12
    VAR     shift, and go to state 13
    NIL     shift, and go to state 22
    ID      shift, and go to state 23
    NOT     shift, and go to state 24
    '['     shift, and go to state 28
    '('     shift, and go to state 29

    alone_id           go to state 39
    id_chain           go to state 40
    varlet             go to state 41
    var                go to state 49
    expr               go to state 53
    func_call          go to state 44
    array_constructor  go to state 46


state 19

   16 stmt: BREAK . end_expr

    ENDL  shift, and go to state 25
    ';'   shift, and go to state 26

    end_expr  go to state 54


state 20

   89 func_decl_named: FUNCTION . id_chain func_body

    ID  shift, and go to state 23

    alone_id  go to state 39
    id_chain  go to state 55


state 21

   17 stmt: RETURN . end_expr
   18     | RETURN . expr end_expr

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    BOOL    shift, and go to state 8
    STRING  shift, and go to state 9
    TRUE    shift, and go to state 10
    FALSE   shift, and go to state 11
    LET     shift, and go to state 12
    VAR     shift, and go to state 13
    NIL     shift, and go to state 22
    ID      shift, and go to state 23
    NOT     shift, and go to state 24
    ENDL    shift, and go to state 25
    ';'     shift, and go to state 26
    '['     shift, and go to state 28
    '('     shift, and go to state 29

    end_expr           go to state 56
    alone_id           go to state 39
    id_chain           go to state 40
    varlet             go to state 41
    var                go to state 49
    expr               go to state 57
    func_call          go to state 44
    array_constructor  go to state 46


state 22

   56 expr: NIL .

    $default  reduce using rule 56 (expr)


state 23

   38 alone_id: ID .

    $default  reduce using rule 38 (alone_id)


state 24

   57 expr: NOT . expr

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    BOOL    shift, and go to state 8
    STRING  shift, and go to state 9
    TRUE    shift, and go to state 10
    FALSE   shift, and go to state 11
    LET     shift, and go to state 12
    VAR     shift, and go to state 13
    NIL     shift, and go to state 22
    ID      shift, and go to state 23
    NOT     shift, and go to state 24
    '['     shift, and go to state 28
    '('     shift, and go to state 29

    alone_id           go to state 39
    id_chain           go to state 40
    varlet             go to state 41
    var                go to state 49
    expr               go to state 58
    func_call          go to state 44
    array_constructor  go to state 46


state 25

    1 end_expr: ENDL .

    $default  reduce using rule 1 (end_expr)


state 26

    2 end_expr: ';' . opt_endl

    ENDL  shift, and go to state 59

    ENDL      [reduce using rule 3 (opt_endl)]
    $default  reduce using rule 3 (opt_endl)

    opt_endl  go to state 60


state 27

    7 stmt_block: '{' . stmt_list '}' opt_endl

    $default  reduce using rule 8 (stmt_list)

    stmt_list  go to state 61


state 28

   74 expr: '[' . varubleType ']' '(' ')'
   97 array_constructor: '[' . array_elem_list ']'

    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    DOUBLE      shift, and go to state 7
    BOOL        shift, and go to state 8
    STRING      shift, and go to state 9
    STRINGT     shift, and go to state 62
    CHARACTERT  shift, and go to state 63
    INTT        shift, and go to state 64
    FLOATT      shift, and go to state 65
    DOUBLET     shift, and go to state 66
    BOOLT       shift, and go to state 67
    TRUE        shift, and go to state 10
    FALSE       shift, and go to state 11
    LET         shift, and go to state 12
    VAR         shift, and go to state 13
    NIL         shift, and go to state 22
    ID          shift, and go to state 23
    NOT         shift, and go to state 24
    '['         shift, and go to state 28
    '('         shift, and go to state 29

    $default  reduce using rule 98 (array_elem_list)

    alone_id           go to state 39
    id_chain           go to state 40
    varlet             go to state 41
    var                go to state 49
    expr               go to state 68
    func_call          go to state 44
    varubleType        go to state 69
    array_constructor  go to state 46
    array_elem_list    go to state 70
    array_elems        go to state 71
    array_elem         go to state 72


state 29

   73 expr: '(' . expr ')'

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    DOUBLE  shift, and go to state 7
    BOOL    shift, and go to state 8
    STRING  shift, and go to state 9
    TRUE    shift, and go to state 10
    FALSE   shift, and go to state 11
    LET     shift, and go to state 12
    VAR     shift, and go to state 13
    NIL     shift, and go to state 22
    ID      shift, and go to state 23
    NOT     shift, and go to state 24
    '['     shift, and go to state 28
    '('     shift, and go to state 29

    alone_id           go to state 39
    id_chain           go to state 40
    varlet             go to state 41
    var                go to state 49
    expr               go to state 73
    func_call          go to state 44
    array_constructor  go to state 46


state 30

   22 stmt: end_expr .

    $default  reduce using rule 22 (stmt)


state 31

   23 stmt: stmt_import .

    $default  reduce using rule 23 (stmt)


state 32

   10 stmt: stmt_block .

    $default  reduce using rule 10 (stmt)


state 33

    9 stmt_list: stmt_list stmt . opt_endl

    ENDL  shift, and go to state 59

    ENDL      [reduce using rule 3 (opt_endl)]
    $default  reduce using rule 3 (opt_endl)

    opt_endl  go to state 74


state 34

   11 stmt: stmt_if .

    $default  reduce using rule 11 (stmt)


state 35

   15 stmt: stmt_switch .

    $default  reduce using rule 15 (stmt)


state 36

   12 stmt: stmt_while .

    $default  reduce using rule 12 (stmt)


state 37

   13 stmt: stmt_for .

    $default  reduce using rule 13 (stmt)


state 38

   14 stmt: stmt_repeat .

    $default  reduce using rule 14 (stmt)


state 39

   39 id_chain: alone_id .

    $default  reduce using rule 39 (id_chain)


state 40

   40 id_chain: id_chain . '.' alone_id
   43 var: id_chain .

    '.'  shift, and go to state 75

    $default  reduce using rule 43 (var)


state 41

   45 var: varlet . id_chain
   46    | varlet . id_chain ':' '[' varubleType ']'
   47    | varlet . id_chain ':' varubleType

    ID  shift, and go to state 23

    alone_id  go to state 39
    id_chain  go to state 76


state 42

   20 stmt: var . '=' expr end_expr
   44 var: var . '[' expr ']'
   48 expr: var .
   77 func_call: var . '(' arg_list ')'

    '='  shift, and go to state 77
    '['  shift, and go to state 78
    '('  shift, and go to state 79

    $default  reduce using rule 48 (expr)


state 43

   19 stmt: expr . end_expr
   58 expr: expr . NOT
   59     | expr . AND expr
   60     | expr . OR expr
   61     | expr . '+' expr
   62     | expr . '-' expr
   63     | expr . '*' expr
   64     | expr . '/' expr
   65     | expr . '%' expr
   66     | expr . '>' expr
   67     | expr . '<' expr
   68     | expr . GE expr
   69     | expr . LE expr
   70     | expr . EQ expr
   71     | expr . NE expr
   72     | expr . RANGE expr

    RANGE  shift, and go to state 80
    EQ     shift, and go to state 81
    NE     shift, and go to state 82
    LE     shift, and go to state 83
    GE     shift, and go to state 84
    NOT    shift, and go to state 85
    ENDL   shift, and go to state 25
    OR     shift, and go to state 86
    AND    shift, and go to state 87
    '<'    shift, and go to state 88
    '>'    shift, and go to state 89
    '+'    shift, and go to state 90
    '-'    shift, and go to state 91
    '*'    shift, and go to state 92
    '/'    shift, and go to state 93
    '%'    shift, and go to state 94
    ';'    shift, and go to state 26

    end_expr  go to state 95


state 44

   75 expr: func_call .

    $default  reduce using rule 75 (expr)


state 45

   21 stmt: func_decl_named .

    $default  reduce using rule 21 (stmt)


state 46

   76 expr: array_constructor .

    $default  reduce using rule 76 (expr)


state 47

    6 stmt_import: IMPORT var .
   44 var: var . '[' expr ']'

    '['  shift, and go to state 78

    '['       [reduce using rule 6 (stmt_import)]
    $default  reduce using rule 6 (stmt_import)


state 48

   37 stmt_repeat: REPEAT stmt_block . WHILE expr

    WHILE  shift, and go to state 96


state 49

   44 var: var . '[' expr ']'
   48 expr: var .
   77 func_call: var . '(' arg_list ')'

    '['  shift, and go to state 78
    '('  shift, and go to state 79
